# cold-coffee-labs

./: .clang-format  .clang-tidy  .clangd  .commit_msg.tmp  .editorconfig  .gitattributes  .gitignore  .graphifyignore  0.txt  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cspell-words.txt  cspell.json  fix_namespaces.py  rust-toolchain.toml  rustfmt.toml
apps/: CMakeLists.txt
apps/sandbox_deck_probe/: CMakeLists.txt  main.cpp
apps/sandbox_director/: CMakeLists.txt  main.cpp
apps/sandbox_god_machine_rc/: .clangd  CMakeLists.txt  main.cpp
apps/sandbox_hell_frame/: CMakeLists.txt  main.cpp
apps/sandbox_infinite_seed/: CMakeLists.txt  main.cpp
apps/sandbox_living_scene/: CMakeLists.txt  main.cpp
apps/sandbox_martyrdom_online/: CMakeLists.txt  main.cpp
apps/sandbox_netplay/: CMakeLists.txt  main.cpp
apps/sandbox_persistence/: CMakeLists.txt  main.cpp
apps/sandbox_physics/: CMakeLists.txt  main.cpp
apps/sandbox_platform_services/: CMakeLists.txt  main.cpp
apps/sandbox_playable/: CMakeLists.txt  main.cpp
apps/sandbox_studio/: CMakeLists.txt  build_test_gwseq.hpp  main.cpp
apps/sandbox_studio_renderer/: CMakeLists.txt  main.cpp
bld/: Cargo.toml
bld/bld-agent/: Cargo.toml
bld/bld-bridge/: Cargo.toml  build.rs
bld/bld-ffi/: Cargo.toml
bld/bld-governance/: Cargo.toml
bld/bld-mcp/: Cargo.toml
bld/bld-provider/: Cargo.toml
bld/bld-rag/: Cargo.toml
bld/bld-replay/: Cargo.toml
bld/bld-tools/: Cargo.toml
bld/bld-tools-macros/: Cargo.toml
bld/include/: bld_ffi_seq_export.h  bld_register.h
bld/scripts/: mcp_smoke_stdin.ps1
editor/: CMakeLists.txt  main.cpp
editor/a11y/: editor_a11y.cpp  editor_a11y.hpp
editor/agent_panel/: agent_panel.cpp  agent_panel.hpp
editor/app/: editor_app.cpp  editor_app.hpp
editor/bld_api/: bld_host_table.cpp  editor_bld_api.cpp  editor_bld_api.hpp
editor/bld_bridge/: hello.cpp  hello.hpp  mcp_stdio_client.cpp  mcp_stdio_client.hpp
editor/commands/: editor_commands.cpp  editor_commands.hpp
editor/config/: editor_config.cpp  editor_config.hpp  editor_paths.cpp  editor_paths.hpp
editor/modules/: module_manifest.cpp  module_manifest.hpp  modules_builtin.cpp  modules_builtin.hpp
editor/panels/: asset_browser_panel.cpp  asset_browser_panel.hpp  console_panel.cpp  console_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  lighting_panel.cpp  lighting_panel.hpp  outliner_panel.cpp  outliner_panel.hpp  panel.hpp  panel_registry.cpp  panel_registry.hpp  render_settings_panel.cpp  render_settings_panel.hpp  render_targets_panel.cpp  render_targets_panel.hpp  stats_panel.cpp  stats_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
editor/pie/: gameplay_host.cpp  gameplay_host.hpp  pie_debug_hud.cpp  pie_debug_hud.hpp  pie_perf_guard.cpp  pie_perf_guard.hpp  rollback_inspector.cpp  rollback_inspector.hpp
editor/reflect/: reflect.hpp  widget_drawer.cpp  widget_drawer.hpp
editor/render/: editor_scene_pass.cpp  editor_scene_pass.hpp  imgui_texture_cache.cpp  imgui_texture_cache.hpp  render_settings.hpp
editor/scene/: authoring_scene_load.cpp  authoring_scene_load.hpp  blockout_brush_export.cpp  blockout_brush_export.hpp  blockout_physics_sync.cpp  blockout_physics_sync.hpp  components.hpp  transform_system.cpp  transform_system.hpp
editor/selection/: selection_context.cpp  selection_context.hpp
editor/seq/: seq_gwseq_rebuild.cpp  seq_gwseq_rebuild.hpp
editor/seq_panel/: seq_panel.cpp  seq_panel.hpp
editor/shell/: file_dialog.cpp  file_dialog.hpp  franchise_roots.cpp  franchise_roots.hpp  layout_state.cpp  layout_state.hpp  manifest_paths.hpp  private_gate.cpp  private_gate.hpp  recent_projects.cpp  recent_projects.hpp  sha256.cpp  sha256.hpp
editor/theme/: corruption_pulse.cpp  corruption_pulse.hpp  default_layout.cpp  default_layout.hpp  distressed_draw.cpp  distressed_draw.hpp  editor_fonts.cpp  editor_fonts.hpp  effects.hpp  graph_theme.cpp  graph_theme.hpp  imgui_style_from_palette.cpp  imgui_style_from_palette.hpp  palette.hpp  palette_imgui.hpp  theme_registry.cpp  theme_registry.hpp  typography.hpp
editor/undo/: command_stack.cpp  command_stack.hpp  commands.hpp  seq_keyframe_command.hpp
editor/viewport/: debug_draw.cpp  debug_draw.hpp  editor_camera.cpp  editor_camera.hpp  gizmo_system.cpp  gizmo_system.hpp
editor/vscript/: vscript_panel.cpp  vscript_panel.hpp
editor/widgets/: distressed_widgets.cpp  distressed_widgets.hpp  spline_editor.cpp  spline_editor.hpp
engine/: CMakeLists.txt
engine/a11y/: CMakeLists.txt  a11y_config.hpp  a11y_cvars.cpp  a11y_cvars.hpp  a11y_types.hpp  a11y_world.cpp  a11y_world.hpp  color_matrices.cpp  color_matrices.hpp  console_commands.cpp  console_commands.hpp  events_a11y.hpp  screen_reader.hpp  screen_reader_null.cpp  selfcheck.cpp  selfcheck.hpp  subtitles.cpp  subtitles.hpp
engine/ai_runtime/: CMakeLists.txt  ai_cvars.cpp  ai_cvars.hpp  ai_runtime_types.hpp  cook_ai_weights_path.hpp  director_policy.cpp  director_policy.hpp  inference_runtime.cpp  inference_runtime.hpp  inference_runtime_contract.hpp  material_eval.cpp  material_eval.hpp  model_registry.cpp  model_registry.hpp  music_symbolic.cpp  music_symbolic.hpp
engine/anim/: CMakeLists.txt  anim_config.hpp  anim_cvars.cpp  anim_cvars.hpp  anim_types.hpp  animation_world.cpp  animation_world.hpp  blend_tree.cpp  blend_tree.hpp  clip.cpp  clip.hpp  console_commands.cpp  console_commands.hpp  events_animation.hpp  ik.cpp  ik.hpp  morph.cpp  morph.hpp  pose.cpp  pose.hpp  skeleton.cpp  (+1 more)
gameplay/: CMakeLists.txt  gameplay.cpp  gameplay_dll_linkage.cpp  gameplay_dll_linkage.hpp  simulation_tick.cpp  simulation_tick.hpp
runtime/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp  playable_bootstrap.cpp  playable_bootstrap.hpp  playable_scene_host.cpp  playable_scene_host.hpp
sandbox/: CMakeLists.txt  main.cpp
shaders/: CMakeLists.txt
tests/: CMakeLists.txt  containers_test.cpp  core_test.cpp  jobs_basic_test.cpp  jobs_test.cpp  jobs_test_simple.cpp  jobs_working_test.cpp  memory_test.cpp  platform_test.cpp  smoke_test.cpp  string_test.cpp  test_main.cpp
(+2375 files in other folders)
