[workspace]
resolver = "2"
members = [
    "bld-mcp",
    "bld-tools",
    "bld-tools-macros",
    "bld-provider",
    "bld-rag",
    "bld-agent",
    "bld-governance",
    "bld-bridge",
    "bld-ffi",
    "bld-replay",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.9.0"
authors = ["Cold Coffee Labs"]
license-file = "../LICENSE"
repository = "https://github.com/SL1C3D-L4BS/cold-coffee-labs"
description = "BLD - Brewed Logic Directive, the native AI copilot subsystem for Greywater Engine."

# ---------------------------------------------------------------------------
# Pinned dependency surface (ADRs 0010-0016, Phase 9 Cargo.toml discipline).
#
# Base deps are always built: serde / serde_json / tokio / thiserror / anyhow
# plus the small, high-value additions (async-trait, blake3, regex, schemars,
# syn/quote/proc-macro2, tokio-util, ulid, futures, tracing).
#
# Heavy ecosystem deps (rmcp, rig-core, mistral.rs, candle, tree-sitter
# family, sqlite-vec, fastembed, notify) are gated behind per-crate feature
# flags, off by default. The base build stays compile-clean and test-green
# without them; production builds flip the flags.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# --- base (always on) ---
serde        = { version = "1",    features = ["derive"] }
serde_json   = { version = "1",    features = ["preserve_order"] }
tokio        = { version = "1",    features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "io-std", "rt"] }
tokio-util   = { version = "0.7",  features = ["rt"] }
thiserror    = "2"
anyhow       = "1"
async-trait  = "0.1"
blake3       = "1.5"
regex        = "1.10"
schemars     = { version = "0.8",  features = ["preserve_order"] }
futures      = "0.3"
futures-util = "0.3"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid         = "1.1"
once_cell    = "1.19"

# --- proc-macro stack (bld-tools-macros only) ---
syn         = { version = "2", features = ["full", "extra-traits"] }
quote       = "1"
proc-macro2 = "1"

# --- heavy ecosystem deps (feature-gated in downstream crates) ---
# The exact 2026-04 pins; dropped in behind features.
rmcp          = { version = "1.5" }
rig-core      = { version = "0.6" }
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = { version = "0.2" }
keyring       = { version = "4.0.0-rc.3" }
candle-core   = { version = "0.7" }
mistralrs     = { version = "0.8" }
llama-cpp-2   = { version = "0.1" }
rusqlite      = { version = "0.31", features = ["bundled", "load_extension"] }
tree-sitter   = { version = "0.22" }
tree-sitter-cpp  = { version = "0.22" }
tree-sitter-c    = { version = "0.21" }
tree-sitter-rust = { version = "0.21" }
tree-sitter-glsl = { version = "0.1" }
tree-sitter-json = { version = "0.21" }
tree-sitter-md   = { version = "0.2" }
petgraph       = { version = "0.6" }
fastembed      = { version = "4" }
notify         = { version = "6" }
notify-debouncer-mini = { version = "0.4" }
jsonschema     = { version = "0.18" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.dev]
opt-level = 0
debug = true

# Miri configuration -- ADR-0016 §2.6 nightly UB gate on the boundary crates.
# Run with: cargo +nightly miri test -p bld-ffi -p bld-bridge
[profile.miri]
inherits = "dev"
opt-level = 0
